--- a/package.json
+++ b/package.json
@@ -10,64 +10,65 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ardrive/turbo-sdk": "^1.12.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@permaweb/aoconnect": "^0.0.59",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
+    "@ar.io/sdk": "^3.13.0",
+    "@ardrive/turbo-sdk": "^1.10.1",
+    "@dha-team/arbundles": "^1.0.3",
+    "@hookform/resolvers": "^3.10.0",
+    "@othent/kms": "^1.0.12",
+    "@permaweb/aoconnect": "^0.0.85",
+    "@permaweb/libs": "^0.0.42",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "arweave-wallet-kit": "^1.0.0",
-    "axios": "^1.7.7",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "arweave-wallet-kit": "^1.0.5",
+    "axios": "^1.9.0",
     "base64-js": "^1.5.1",
     "bluebird": "^3.7.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.18.2",
     "immer": "^10.1.1",
-    "install": "^0.13.0",
     "lucide-react": "^0.435.0",
-    "mime": "^4.0.4",
-    "npm": "^10.8.3",
+    "mime": "^4.0.7",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.1",
-    "simple-icons": "^13.8.0",
-    "tailwind-merge": "^2.5.2",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.57.0",
+    "react-router-dom": "^6.30.1",
+    "simple-icons": "^13.21.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-local-storage-state": "^19.4.0",
-    "warp-arbundles": "^1.0.4",
-    "zod": "^3.23.8"
+    "use-local-storage-state": "^19.5.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/bluebird": "^3.5.42",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.15.30",
     "@types/path-browserify": "^1.0.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.5.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^15.15.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0",
+    "vite": "^6.3.5"
   }
 }
